0023650: Slow mesher: one bspline surface, 80 seconds for 132 triangles Corrections in GeomLib::NormEstim, added norm computing using GeomLProp_SLProps. Corrections in GeomLib::NormEstim, normal is computed with CSLib::Normal in case of a null normal. Modified GeomLib::NormEstim Algo in case of null normal. Added test case bugs/mesh/bug23650